# Patrons

./: build.gradle
patrons/: build.gradle  gradle.properties
patrons/src/main/cpp/: CMakeLists.txt  patrons-native.ver  patrons_core.c  patrons_core.h
patrons/src/main/cpp/xlog_stub/: xlog.c  xlog.h
patrons/src/main/java/com/alibaba/android/patronus/: Patrons.java  _Patrons.java
patrons/src/main/java/com/alibaba/android/patronus/util/: Log.java
